--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                            <input id="phone-number-field" type="number" min="0" class="form-control text-center" value="1">
                            <button id="btn-phone-plus" class="btn btn-default"><i class="fas fa-plus"></i></button>
                         </div>
-                        <h5>$<span>1219</span></h5>
+                        <h5>$<span id="phone-total">1219</span></h5>
                         <img src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
@@ -66,9 +66,9 @@
                      </div>
 
                      <div class="col-md-4 status">
-                        <h5>$1,278</h5>
-                        <h5>$0</h5>
-                        <h5>$1,278</h5>
+                        <h5>$<span id="sub-total">1,278</span></h5>
+                        <h5>$<span id="tax-amount">0</span></h5>
+                        <h5>$<span id="final-total">1,278</span></h5>
                      </div>
                   </div>
                </div>
@@ -79,6 +79,7 @@
          </div>
       </div>
    </section>
+   <script src="./images/js/common.js"></script>
    <script src="case.js"></script>
    <script src="phone.js"></script>
 </body>
